<resources>
    <string name="app_name">Beat it smoking</string>
    <string name="action_settings">Settings</string>
    <string name="removed">removed event</string>
    <string name="UNDO">UNDO</string>
    <string name="swipetodelete">swipe to delete</string>
    <string name="action_export">export events...</string>
    <string name="export_file_success">exported succesfully to %s</string>
    <string name="export_file_error">file export failed: %s</string>
    <string name="permission_denied">exporting events requires access to external storage</string>
    <string name="logcig">push this notification to log a cigarette</string>
    <string name="logcigtitle">log cigarette</string>
    <string name="addevent">New cigarette</string>
    <string name="startdate">Date</string>
    <string name="starttime">Time</string>
    <string name="endtime">Duration</string>
    <string name="saveevent">OK</string>
    <string name="cancelevent">Abort</string>
</resources>
