<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#4881ae"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">
    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/addevent"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold" />

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/startdate"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cigdateday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:inputType="date"
            android:text="dd" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:text="/"
            android:textSize="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/cigdatemonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:inputType="date"
            android:text="mm" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:text="/"
            android:textSize="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/cigdateyear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="@android:color/white"
            android:inputType="date"
            android:text="yy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/starttime"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/startTImeHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textAlignment="textEnd"
            android:inputType="time"
            android:text="hh" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:text=":"
            android:textSize="15dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/startTImeMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:inputType="time"
            android:text="mm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_start"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/endtime"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/durationminutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textAlignment="textEnd"
            android:inputType="time"
            android:text="mm" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:text=":"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/durationseconds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time"
            android:text="ss"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verifiedLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/verifiedText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:text="Verified"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/smokeEventVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:buttonTint="@android:color/white"
            android:checked="false"
            android:gravity="center"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/abortButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#061c2d"
            android:text="@string/cancelevent"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/okayButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#26455c"
            android:text="@string/saveevent"
            android:textColor="@android:color/white" />

    </LinearLayout>


</LinearLayout>